--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 streamlit==1.28.0
-pandas==2.0.3
+pandas==2.1.4
 numpy==1.24.3
-scikit-learn==1.3.0
-tensorflow==2.13.0
+scikit-learn==1.3.2
 nltk==3.8.1
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
+matplotlib==3.7.3
+seaborn==0.13.0
+plotly==5.17.0
 joblib==1.3.2
-wordcloud==1.9.3
+pickle5==0.0.11
