--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-streamlit==1.28.0
-pandas==2.1.4
-numpy==1.24.3
-scikit-learn==1.3.2
-nltk==3.8.1
-matplotlib==3.7.3
-seaborn==0.13.0
-plotly==5.17.0
-joblib==1.3.2
-pickle5==0.0.11
+streamlit
+pandas
+scikit-learn
+nltk
+plotly
+joblib
